--- a/tests/queries/0_stateless/03006_join_on_inequal_expression_4.sql.j2
+++ b/tests/queries/0_stateless/03006_join_on_inequal_expression_4.sql.j2
@@ -42,6 +42,10 @@ SELECT t1.*, t2.* FROM t1 {{ join_type }} JOIN t2 ON t1.key = t2.key AND (t1.a=2
 {% endfor -%}
 {% endfor -%}
 
--- LOGICAL_ERROR Not-ready Set is passed as the second argument for function 'in'
--- https://github.com/ClickHouse/ClickHouse/issues/64513
--- SELECT t1.*, t2.* FROM t1 LEFT JOIN t2 ON t1.key = t2.key AND (t1.a=2 OR (t2.a IN (SELECT a FROM t1 WHERE a = 10))) ORDER BY ALL;
+
+{% for join_type in ['LEFT', 'INNER', 'RIGHT', 'FULL'] -%}
+{% for algorithm in ['hash', 'grace_hash'] -%}
+SET join_algorithm='{{ algorithm }}';
+SELECT t1.*, t2.* FROM t1 {{ join_type }} JOIN t2 ON t1.key = t2.key AND (t1.a=2 OR (t2.a IN (SELECT a FROM t1 WHERE a = 10))) ORDER BY ALL;
+{% endfor -%}
+{% endfor -%}
